# CAS741

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: buildtex.yml  ci.yml
docker/: Dockerfile  build_image.sh  start_container.sh
docs/: Common.tex  Makefile
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/Presentation/: Implementation.pptx  SRS.pptx  VnV.pptx
docs/ProblemStatementAndGoals/: ProblemStatement.tex
docs/ReflectAndTrace/: ReflectAndTrace.tex
docs/SRS/: SRS.tex
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: VnVReport.tex
refs/: References.bib  bib.bib
src/: RwaveDetect.cpp  RwaveDetect.hpp  annRMSE.cpp  annRMSE.hpp  dataStructure.cpp  dataStructure.hpp  generalDigitalFilter.cpp  generalDigitalFilter.hpp  io_processing.cpp  io_processing.hpp  logger.cpp  logger.hpp  main.cpp  mmath.cpp  mmath.hpp  pantomp.cpp  pantomp.hpp
test/: cTest.sh  cppcheck.sh  lcovTest.sh  linter.sh  test_all.sh
test/unitTest/: RwaveDetect_Test.cpp  annRMSE_Test.cpp  dataStructure_Test.cpp  general.hpp  generalDigitalFilter.cpp  io_processing.cpp  logger_Test.cpp  mmath_Test.cpp
test/unitTest/data/: RMSE1.txt  RMSE17.txt  lfilter1.txt  lfilter10.txt  lfilter11.txt  lfilter12.txt  lfilter13.txt  lfilter14.txt  lfilter15.txt  lfilter16.txt  lfilter17.txt  lfilter18.txt  lfilter19.txt  lfilter2.txt  lfilter20.txt  lfilter3.txt  lfilter4.txt  lfilter5.txt  lfilter6.txt  lfilter7.txt  lfilter8.txt  lfilter9.txt  mitbih_100.ann.txt  square1.txt  square10.txt  square11.txt  square12.txt  square13.txt  square14.txt  square15.txt  square16.txt  square17.txt  square18.txt  square19.txt  square2.txt  square20.txt  square3.txt  square4.txt  square5.txt  square6.txt  (+3 more)
